--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@ body {
   padding: 2.25rem 1.5rem;
   gap: .8rem;
   width: 17.5rem;
+  height: auto;
   margin: 7.5rem auto 7.5rem auto;
   font-family: inter-variable;
   border-radius: .5rem;
@@ -78,6 +79,7 @@ body {
 @media screen and (max-width: 45rem) {
   .card{
     width: 80%;
+    height: auto;
     padding: 2.25rem .75rem;
   }
 }
